tests/ui/error-codes/E0800.stderr
error[E0800]: cannot find type or const parameter `Missing` in this scope
  --> $DIR/E0800.rs:1:31
   |
LL | fn test() -> impl Sized + use<Missing> {}
   |                               ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0800`.
