tests/ui/error-codes/E0800.rs
fn test() -> impl Sized + use<Missing> {}
//~^ ERROR E0800

fn main() {}
